# faiss-note

./: README.md  SIMILARITY.md
cpp/: 1_intro.cpp  2_indexFlatIP.cpp  3_write_and_read_index.cpp  4_gpu.cpp  5_gpu_load_test.cpp  CMakeLists.txt
docker/: Dockerfile  Dockerfile.gpu  README.md  docker_run.sh
python/: 1_intro.ipynb  2_IVFFlat.ipynb  3_IndexFlatIP.py  4_write_and_read_index.py  5_group_result.py  6_IndexIDMap.py  7_gpu.py  8_IndexIDMap_gpu.py
